Fixed resizing issues on Safari
• Added CSS for the lottie width to prevent automatic resizing
• Added a blank svg to remove artifacting when an image path was unspecified in the FAQ section

--- a/components/Home/Faq/styles.module.scss
+++ b/components/Home/Faq/styles.module.scss
@@ -20,6 +20,8 @@
     }
     .faqLotties {
         position: relative;
+        display: flex;
+        min-height: 100vh;
     }
 
     .hideText, .hideText2 {
@@ -47,8 +49,8 @@
         }
 
         @media screen and (min-width: 1950px) {
-            width: 730px;
-            left: calc(49vw - 730px);
+            // width: 730px;
+            // left: calc(49vw - 730px);
             font-size: 20px;
             h2 {
                 font-size: 24px;
@@ -58,7 +60,8 @@
             top: 8%;
             width: 384px;
             left: calc(45vw - 192px);
-            height: 80%;
+            min-height: 80%;
+            height: fit-content;
             font-size: 14px;
             padding: 13px;
             background-color: #FFFACC;;
@@ -94,8 +97,8 @@
         }
 
         @media screen and (min-width: 1950px) {
-            width: 730px;
-            right: calc(47.5vw - 730px);
+            // width: 730px;
+            // right: calc(47.5vw - 730px);
             font-size: 20px;
             h2 {
                 font-size: 24px;
@@ -123,13 +126,24 @@
         }
     }
 
+    .lottieSize {
+        width: 100%;
+        @media (max-width: 900px) {
+            max-width: 450px;
+        }
+        @media (max-width: 430px) {
+            max-width: 100%;
+            width: 100%;
+        }
+    }
+
     .faqSpellbook {
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        height: fit-content;
-        width: 100%;
+        height: 90%;
+        min-width: 100%;
         // transform: scale(0.9);
         margin: auto;
         top: -30vh;
